# engraVis

./: CMakeLists.txt
include/glad/: glad.h
shaders/: debug_quad.frag  debug_quad.vert  dummy.vert  lighting.frag  lighting.vert  zshading.frag  zshading.vert
src/: debug_window.cpp  debug_window.h  gui.cpp  gui.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h
